--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 
 /* Header styling */
 .header {
-    background-color: #640178;
+    background-color: #b81dd7;
     display: flex;
     height: 70px;
 }
@@ -15,7 +15,7 @@ html, body {
 }
 
 .title-text {
-    color: white;
+    color: rgb(255, 255, 255);
     justify-content: center;
     margin: 16px;  
 }
@@ -30,8 +30,22 @@ html, body {
     margin: 20px;
 }
 
+.a-head {
+    text-decoration: none;
+    color:#000000;
+}
+
+.a-head:hover {
+    color: white;
+}
+
 .list-head {
     list-style-type: none;
-    padding: 5px;
+    padding: 5px 10px;
     margin-left: 5px;
+}
+
+.list-head:hover{
+    background-color: black;
+    border-radius: 40px;
 }
